<?xml version ="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/employment_row_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_hiehgt="match_parent"
            android:layout_margin="8dp"
            android:layout_weight-"1">

        <ImageView
            android:id="@+id/image_view_company_logo"
            android:layout_width="match_parent"
            android:layout_hiehgt="match_parent"
            android:contentDescription="@string/company_logo"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            adroid:text="Company Name"
            android:textColor="@android:color/white"
            android:textSize=18sp"

        <LinearLayout
            android:layout_width="match_parent"
            android_layout_height="wrap_content"

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City: "
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text_view_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wentzville"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout

    <LinearLayout
        android:layout_width="match_parent"
        android_layout_height="wrap_content"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State: "
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_view_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MO"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic" />
</LinearLayout

<LinearLayout
android:layout_width="match_parent"
android_layout_height="wrap_content"

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Year: "
android:textColor="@android:color/white"
android:textSize="12sp"
android:textStyle="italic" />

<TextView
android:id="@+id/text_view_year"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="2016"
android:textColor="@android:color/white"
android:textSize="12sp"
android:textStyle="italic" />
    </LinearLayout

<TextView
android:id="@+id/text_view_job_description"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:maxLines="3"
android:layout_marginTop="32dp"
android:text="@string/job_description"
android:textColor="@android:color/white"
android:textSize="12sp"
android:textStyle="normal" />

<LinearLayout
android:layout_width="match_parent"
android_layout_height="match_parent"
android:gravity="right|bottom"
android:layout_gravity="right|bottom">

<TextView
    android:id="@+id/text_view_position"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="40dp"
    android:text="@string/text_view_title"
    android:textColor="@android:color/primary_dark"
    android:textSize="16sp"
    android:textStyle="bold" />
</LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>