<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.example.laurenresume.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:text="@string/title_skill_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/text_view_skill_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/skill_summary"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_skill_highlights"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/holo_green_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <de.hdodenhof.circleimageview.CircleImageVIew
                    android:id="@+id/javascript_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/javascript_icon"
                    android:layout_weight="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="JavaScript"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="16dp" />

                <RatingBar
                    android:id="@+id/rating_skill_1"
                    style="?android:attr/ratingBarStyleSmall"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4"
                    android:layout_margin="8dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <de.hdodenhof.circleimageview.CircleImageVIew
                    android:id="@+id/csharp_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/csharp_icon"
                    android:layout_weight="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="C#"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="16dp" />

                <RatingBar
                    android:id="@+id/rating_skill_2"
                    style="?android:attr/ratingBarStyleSmall"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4"
                    android:layout_margin="8dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <de.hdodenhof.circleimageview.CircleImageVIew
                    android:id="@+id/sql_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/sql_icon"
                    android:layout_weight="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="SQL"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="16dp" />

                <RatingBar
                    android:id="@+id/rating_skill_3"
                    style="?android:attr/ratingBarStyleSmall"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4"
                    android:layout_margin="8dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <de.hdodenhof.circleimageview.CircleImageVIew
                    android:id="@+id/android_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/android_icon"
                    android:layout_weight="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="Android"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="16dp" />

                <RatingBar
                    android:id="@+id/rating_skill_4"
                    style="?android:attr/ratingBarStyleSmall"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4"
                    android:layout_margin="8dp"
                    android:layout_weight="0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>